# launchdeck_pysocialauth_extensions

./: README.md  pyproject.toml
src/launchdeck_pysocialauth_extensions/: __init__.py  backends.py
src/launchdeck_pysocialauth_extensions/backends/: __init__.py  main.py
